Action server drafted

--- a/configs/dbc/realworld_image.yaml
+++ b/configs/dbc/realworld_image.yaml
@@ -73,6 +73,9 @@ log_freq: 2000
 save_freq: 20000
 log_dir: logs
 
+# eval
+model_path: ckpt/edm_pearce_image/models/model_500000.pt
+
 # hydra
 hydra:
   job:
