--- a/configs/dbc/realworld_image_eef_pos.yaml
+++ b/configs/dbc/realworld_image_eef_pos.yaml
@@ -3,7 +3,7 @@ pipeline_name: dbc_realworld_image
 # env
 env_name: realworld_image_eef_pos
 abs_action: false
-dataset_path: data/frankaslide_tactile.hdf5
+dataset_path: data/frankaslide_fix.hdf5
 mode: train
 max_episode_steps: 400
 
@@ -24,20 +24,16 @@ shape_meta:
       type: low_dim
 
 action_dim: 3
-obs_steps: 1
-action_steps: 1
+obs_steps: 8
+action_steps: 4
 
 # diffusion
 diffusion: edm
-solver: ${solvers.${diffusion}}
-solvers:
-  ddpm: null
-  edm: euler
-  sde: ode_dpmsolver++_2M
-  csde: ode_dpmsolver++_2M
+solver: euler
 
 # obs_encoder
 rgb_model: resnet18
+rgb_weights: IMAGENET1K_V1
 resize_shape: null
 crop_shape:
   - 224
@@ -49,20 +45,18 @@ use_seq: true
 # train
 device: cuda:0
 seed: 0
-gradient_steps: 250000
-batch_size: 128
-horizon: 2
+gradient_steps: 1000000
+batch_size: 64
+horizon: 8
 nn: dit
+val_ratio: 0.05
 sample_steps: 50
 temperature: 1.0
 diffusion_x: false
 extra_sample_steps: 8
 
 # optimizer
-lr: ${lrs.${nn}}
-lrs:
-  dit: 0.0001
-  pearce_mlp: 0.001
+lr: 0.0001
 
 # log
 exp_name: ${env_name}_${diffusion}_${nn}
@@ -71,11 +65,11 @@ project: tactile-rep
 group: dbc_realworld_image
 wandb_mode: online
 log_freq: 5000
-save_freq: 50000
+save_freq: 20000
 log_dir: logs
 
 # eval
-model_path: ckpt/edm_dit_image/model_320000.pt # ckpt/edm_pearce_image/model_500000.pt
+model_path: ckpt/dbc_obsstep2_val0.0045/model_500000.pt
 
 # hydra
 hydra:
