--- a/configs/dp/realworld_image_eef_pos.yaml
+++ b/configs/dp/realworld_image_eef_pos.yaml
@@ -1,15 +1,15 @@
 pipeline_name: dp_realworld_image
 # env
-env_name: realworld_image
+env_name: realworld_image_eef_pos
 abs_action: false
-dataset_path: data/frankaslide.hdf5
+dataset_path: data/frankaslide_fix.hdf5
 mode: train
 max_episode_steps: 400
-render_obs_key: 'agentview_image'
+
 shape_meta:
   action:
     shape:
-    - 7
+    - 3
   obs:
     agentview:
       shape:
@@ -17,24 +17,21 @@ shape_meta:
       - 224
       - 224
       type: rgb
-    ee_pose:
+    ee_pos:
       shape:
       - 3
       type: low_dim
-    ee_quat:
-      shape:
-      - 4
-      type: low_dim
-    gripper_state:
-      shape:
-      - 1
-      type: low_dim
-action_dim: 7
+
+action_dim: 3
 obs_steps: 2
-action_steps: 4
+action_steps: 8
+# diffusion
+diffusion: edm
+solver: euler
 
 # obs_encoder
 rgb_model: resnet18
+rgb_weights: IMAGENET1K_V1
 resize_shape: null
 crop_shape:
   - 224
@@ -48,12 +45,12 @@ device: cuda:0
 seed: 0
 gradient_steps: 500000
 batch_size: 64
-horizon: 5
-nn: chi_transformer # or chi_unet or dit
-diffusion: ddpm
+horizon: 10
+nn: chi_transformer
+val_ratio: 0.05
 sample_steps: 50
 temperature: 1.0
-diffusion_x: true
+diffusion_x: false
 extra_sample_steps: 8
 
 # optimizer
@@ -65,7 +62,7 @@ save_path: logs
 project: tactile-rep
 group: dp_realworld_image
 wandb_mode: online
-log_freq: 2000
+log_freq: 5000
 save_freq: 20000
 log_dir: logs
 
